# prognet

./: .dockerignore  .gitignore  .isort.cfg  Dockerfile  docker-compose-local.yaml  docker-compose.yaml  isort.sh  push.sh  pyproject.toml  utils.py
_root/: db.py  init_db.py  main.py  settings.py
_root/config/: polls.yaml  polls_local.yaml
auth/: app.py  models.py  policies.py  routes.py  views.py
auth/templates/: login.html
config/: polls.yaml  polls_local.yaml
fake_data/: gen.py
polls/: app.py  db.py  hello.py  init_db.py  main.py  models.py  mysql.py  routes.py  settings.py  views.py
polls/templates/: base.html  index.html  login.html  message.html  post.html  posts.html  posts_form.html  profile_detail.html  profile_form.html
